package dev.boooiil.historia.items.crafted;

public class Custom extends BaseItem {

}
